crates/ruff_python_parser/tests/snapshots/invalid_syntax@simple_and_compound_stmt_on_same_line.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/simple_and_compound_stmt_on_same_line.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..17,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..1,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 0..1,
                            id: Name("a"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 3..16,
                    pattern: None,
                    test: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 6..7,
                            id: Name("b"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 9..13,
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 15..16,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 15..16,
                                        id: Name("b"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | a; if b: pass; b
  |    ^^ Syntax Error: Compound statements are not allowed on the same line as simple statements
  |
